<resources>
    <string name="app_name">Song</string>
    <string name="title">Song Title</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="star1">1</string>
    <string name="star2">2</string>
    <string name="star3">3</string>
    <string name="star4">4</string>
    <string name="star5">5</string>
    <string name="insert">Insert</string>
    <string name="songList">Show List</string>
</resources>